1. Collection API Улучшения[#153627]