@@ -20,7 +20,7 @@ public class ConvertList2ArrayTest {
     public void when7ElementsThen9() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6, 7),
+                List.of(1, 2, 3, 4, 5, 6, 7),
                 3
         );
         int[][] expect = {
@@ -37,9 +37,9 @@ public class ConvertList2ArrayTest {
     @Test
     public void when3ArraysThenOneList() {
         ConvertList2Array list = new ConvertList2Array();
-        List<int[]> incoming = new ArrayList<>(Arrays.asList(new int[]{1, 2}, new int[]{3, 4, 5, 6}));
+        List<int[]> incoming = List.of(new int[]{1, 2}, new int[]{3, 4, 5, 6});
         List<Integer> result = list.convert(incoming);
-        List<Integer> expected = new ArrayList<>(Arrays.asList(1, 2, 3, 4, 5, 6));
+        List<Integer> expected = List.of(1, 2, 3, 4, 5, 6);
         assertThat(result, is(expected));
     }
 }
